v2/manifest_validation.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: namespacereservations.admission.online.openshift.io
webhooks:
- name: namespacereservations.admission.online.openshift.io
  clientConfig:
    service:
      namespace: default
      name: webhooks
     path: /apis/admission.online.openshift.io/v1beta1/namespacereservations
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ4akNDQXRvQ0NRQ2Zsd1NWbVFqczBEQU5CZ2txaGtpRzl3MEJBUTBGQURDQnVqRUxNQWtHQTFVRUJoTUMKUTBFeEVEQU9CZ05WQkFnTUIxUnZjbTl1ZEc4eEVEQU9CZ05WQkFjTUIxUnZjbTl1ZEc4eEVEQU9CZ05WQkJFTQpCMDAwUXlBNVF6UXhGekFWQmdOVkJBa01Ea1poYTJWVGRISmxaWFFnTVRJek1SQXdEZ1lEVlFRS0RBZG1ZV3RsCmIzSm5NUmN3RlFZRFZRUUxEQTVHWVd0bFJHVndZWEowYldWdWRERVNNQkFHQTFVRUF3d0phbTExZEhWaExtbHYKTVIwd0d3WUpLb1pJaHZjTkFRa0JGZzVtWVd0bFgyVnRZV2xzTG1OdmJUQWVGdzB5TVRBeE1EY3hOakExTXpGYQpGdzB5TVRBeU1EW [...]
  rules:
  - operations:
    - CREATE
    apiGroups:
    - ""
    apiVersions:
    - "b1"
    resources:
    - namespaces
  failurePolicy: Ignore
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: webhook
  name: webhook
spec:
  ports:
    - port: 443
      targetPort: 8000
  selector:
role: webhook

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    role: webhook
  name: webhook
spec:
  containers:
    - name: webhook
      image: djmutua/doxmt:latest
      imagePullPolicy: IfNotPresent
      ports:
- containerPort: 8000
