v2/validating_webhook_tmpl.yml
---
apiVersion: admissionregistration.k8s.io/v1beta1
  kind: MutatingWebhookConfiguration
  metadata:
    name: <controller_name>
  webhooks:
  - name: <webhook_name>
    clientConfig:
      service:
        namespace:
        name:
       path: <webhook_url>
      caBundle: <cert>
    rules:
    - operations:
      - <operation>
      apiGroups:
      - ""
      apiVersions:
      - "*"
      resources:
      - <resource>
    failurePolicy: <policy>
